--- a/html/dalma_hanja_23.html
+++ b/html/dalma_hanja_23.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html><html> <head><title>Корейский словарь dalma.ru, ханча 2201-2300</title><meta http-equiv=Content-Type content="text/html; charset=utf-8"><meta name=viewport content="width=device-width, initial-scale=1.0"><style type=text/css>
+<!DOCTYPE html><html lang=ko> <head><title>Корейский словарь dalma.ru, ханча 2201-2300</title><meta http-equiv=Content-Type content="text/html; charset=utf-8"><meta name=viewport content="width=device-width, initial-scale=1.0"><style type=text/css>
 	 
 	 body
 	 {
 		background: black;
 		color: white;
+        font-family: Tahoma, Verdana;
 	 }
 	 td 
 	 {
