--- a/dict.tmpl.html
+++ b/dict.tmpl.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
   <head>
   <title>Корейский словарь dalma.ru, ханча {{start_number}}-{{end_number}}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -11,6 +11,7 @@
 	 {
 		background: black;
 		color: white;
+        font-family: Tahoma, Verdana;
 	 }
 	 td 
 	 {
